# Network-Devices-Monitor

./: .gitignore  CMakeCache.txt  Makefile
src/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.alpine-syslog  Dockerfile.ubuntu-syslog  compiler.sh  docker-compose.yml  tcp_client  tcp_client.cpp  tcp_client_func.cpp  tcp_server  tcp_server.cpp  tcp_server_func.cpp  tcp_server_func.h  udp_server.cpp  udp_server.h
src/app/: tcp_client.cpp  tcp_server.cpp  udp_server.cpp
src/dashboard/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/docker/: Dockerfile  docker-compose.yml
src/include/: SQLite_manager.h  protocol.h  tcp_client_func.h  tcp_server_func.h
src/lib/: SQLite_manager.cpp  tcp_server_func.cpp
